service-mesh/virtual-service-music.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-music
  namespace: service-mesh-demo
spec:
  hosts:
  - recommendations
  http:
    - route:
      - destination:                    ##############################################
          host: recommendations         # The K8S recommendations service, in addition
          subset: recommendation-music  # to using the labels declared in its
          Port:                         # spec.selector attribute, will bind to pods 
            number: 8080                # that also have labels defined in the
        weight: 100                     # recommendation-music subset of the 
                                        # Destination Rule.
                                        ##############################################
