service-mesh/virtual-service-orders.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-orders
  namespace: service-mesh-demo
spec:
  hosts:
  - "*"
  gateways:
  - service-mesh-demo-gateway ###############################################
  http:                       # This Virtual Service listens for requests
  - match:                    # coming in on this Gateway, service-mesh-demo-gateway
    - uri:                    ###############################################
        exact: /     ###############################################
    route:           # Any root request, for example, a request coming from:
    - destination:   # http://istio-ingressgateway-istio-system.apps.mydomain.eastus.aroapp.io/
        host: orders # will be forwarded to the Kubernetes service named orders at port 8080
        port:        ###############################################
          number: 8080
